--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@mdx-js/loader": "^1.0.20",
     "@next/mdx": "^8.1.0",
+    "babel-plugin-react-html-attrs": "^2.1.0",
     "next": "^8.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
