--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-plugin-react-html-attrs": "^2.1.0",
     "next": "^8.1.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-social-icons": "^4.1.0"
   }
 }
