--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   },
   "dependencies": {
     "@mdx-js/loader": "^1.0.20",
-    "@next/mdx": "^8.1.0",
+    "@mdx-js/mdx": "^1.0.20",
     "babel-plugin-react-html-attrs": "^2.1.0",
     "next": "^8.1.0",
+    "next-mdx-frontmatter": "^0.0.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-social-icons": "^4.1.0"
