--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "devDependencies": {
     "@types/micro": "^7.3.3",
     "@types/node": "^12.0.4",
+    "@types/react": "^16.8.19",
+    "@types/react-dom": "^16.8.4",
     "@types/webpack-env": "^1.13.9",
     "hot-module-replacement": "^3.0.3",
     "ts-node": "^8.2.0",
