--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "node --require ts-node/register server"
   },
   "devDependencies": {
+    "@types/finalhandler": "^1.1.0",
     "@types/micro": "^7.3.3",
+    "@types/microrouter": "^3.1.0",
     "@types/node": "^12.0.4",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
@@ -21,8 +23,10 @@
     "@mdx-js/runtime": "^1.0.20",
     "front-matter": "^3.0.2",
     "micro": "^9.3.4",
+    "microrouter": "^3.1.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-social-icons": "^4.1.0"
+    "react-social-icons": "^4.1.0",
+    "serve-handler": "^6.0.1"
   }
 }
