--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@mdx-js/runtime": "^1.0.20",
     "front-matter": "^3.0.2",
+    "globby": "^9.2.0",
     "micro": "^9.3.4",
     "microrouter": "^3.1.3",
     "react": "^16.8.6",
