--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "globby": "^9.2.0",
     "micro": "^9.3.4",
     "microrouter": "^3.1.3",
+    "prism-react-renderer": "^0.1.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-social-icons": "^4.1.0",
