--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Eric Clemmons <eric@smarterspam.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "node --require ts-node/register server"
+    "dev": "node --require ts-node/register src/server"
   },
   "devDependencies": {
     "@types/finalhandler": "^1.1.0",
