--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@types/finalhandler": "^1.1.0",
+    "@types/html-minifier": "^3.5.3",
     "@types/micro": "^7.3.3",
     "@types/microrouter": "^3.1.0",
     "@types/node": "^12.0.4",
@@ -23,6 +24,7 @@
     "@mdx-js/runtime": "^1.0.20",
     "front-matter": "^3.0.2",
     "globby": "^9.2.0",
+    "html-minifier": "^4.0.0",
     "micro": "^9.3.4",
     "microrouter": "^3.1.3",
     "prism-react-renderer": "^0.1.6",
