--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Eric Clemmons <eric@smarterspam.com>",
   "license": "MIT",
   "scripts": {
+    "build": "node --require ts-node/register src/build",
     "dev": "node --require ts-node/register src/server"
   },
   "devDependencies": {
@@ -13,6 +14,7 @@
     "@types/micro": "^7.3.3",
     "@types/microrouter": "^3.1.0",
     "@types/node": "^12.0.4",
+    "@types/ora": "^3.2.0",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
     "@types/webpack-env": "^1.13.9",
@@ -22,11 +24,15 @@
   },
   "dependencies": {
     "@mdx-js/runtime": "^1.0.20",
+    "@types/fs-extra": "^7.0.0",
+    "escape-string-regexp": "^2.0.0",
     "front-matter": "^3.0.2",
+    "fs-extra": "^8.0.1",
     "globby": "^9.2.0",
     "html-minifier": "^4.0.0",
     "micro": "^9.3.4",
     "microrouter": "^3.1.3",
+    "ora": "^3.4.0",
     "prism-react-renderer": "^0.1.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
