--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "prebuild": "node -e \"require('fs-extra').emptyDir('dist')\"",
     "build": "tsc",
     "dev": "cd example && yarn dev",
-    "predeploy": "yarn build",
-    "deploy": "np",
+    "prerelease": "yarn build",
+    "release": "np",
     "postbuild": "chmod +x $npm_package_bin_mdx_site",
     "prestart": "yarn build",
     "start": "cd example && yarn start"
