--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "dist/index.js",
   "bin": "dist/bin/mdx-site.js",
   "files": [
-    "dist"
+    "dist",
+    "template"
   ],
   "author": "Eric Clemmons <eric@smarterspam.com>",
   "license": "MIT",
