--- a/package.json
+++ b/package.json
@@ -30,9 +30,7 @@
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
     "@types/webpack-env": "^1.13.9",
-    "np": "^5.0.3",
-    "ts-node": "^8.2.0",
-    "typescript": "^3.5.1"
+    "np": "^5.0.3"
   },
   "dependencies": {
     "@mdx-js/runtime": "^1.0.20",
@@ -49,6 +47,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-social-icons": "^4.1.0",
-    "serve-handler": "^6.0.1"
+    "serve-handler": "^6.0.1",
+    "ts-node": "^8.2.0",
+    "typescript": "^3.5.1"
   }
 }
