--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mdx-site",
   "version": "1.0.0",
+  "repository": "git@github.com:ericclemmons/mdx-site.git",
   "main": "dist/index.js",
   "bin": "dist/bin/mdx-site.js",
   "files": [
