--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "scripts": {
     "prebuild": "node -e \"require('fs-extra').emptyDir('dist')\"",
     "build": "tsc",
+    "dev": "cd example && node --require ts-node/register ../src/bin/mdx-site.tsx",
     "prerelease": "yarn build",
     "release": "np",
     "postbuild": "chmod +x $npm_package_bin_mdx_site"
