--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "dev": "cd example && node --require ts-node/register ../src/bin/mdx-site.tsx",
     "prerelease": "yarn build",
     "release": "np",
-    "postbuild": "chmod +x $npm_package_bin_mdx_site"
+    "postbuild": "sh -c 'chmod +x ${npm_package_bin_mdx_site:-dist/bin/mdx-site.js}'"
   },
   "devDependencies": {
     "@types/finalhandler": "^1.1.0",
     "@types/fs-extra": "^8.0.0",
     "@types/html-minifier": "^3.5.3",
     "@types/micro": "^7.3.3",
-    "@types/microrouter": "^3.1.0",
+    "@types/microrouter": "^3.1.1",
     "@types/node": "^12.6.8",
     "@types/ora": "^3.2.0",
     "@types/webpack-env": "^1.14.0",
@@ -31,8 +31,8 @@
   },
   "dependencies": {
     "@mdx-js/runtime": "^1.1.0",
-    "@types/react": "^16.8.23",
-    "@types/react-dom": "^16.8.5",
+    "@types/react": "^16.9.23",
+    "@types/react-dom": "^16.9.5",
     "escape-string-regexp": "^2.0.0",
     "front-matter": "^3.0.2",
     "fs-extra": "^8.1.0",
